--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,12 @@ body {
   }.cartao__conteudo__resposta p {
     color: var(--card-back-color);
     font-weight: 700;
+  }cartao:hover .cartao__conteudo
+    transform: rotatey (180deg) 
+}
+  .cartao__conteudo{
+    transform-style: preserve-3d;
+    transition: transform 380ms ease-in-out;
   }
   footer {
     background-color: black;
@@ -51,3 +57,9 @@ body {
     width: 100%;
     height: 2rem;
   }    
+  footer p{
+    text-align: center; 
+    font-size: 0.6rem;
+    margin-top: 0.5rem;
+    
+    }
