--- a/assets/style.css
+++ b/assets/style.css
@@ -9,57 +9,89 @@
 body {
   background: url(img/bg-desktop-blue.webp);
   font-family: Grandstander;
-}.cartao__conteudo {
-    background-color: var(--card-front-color);
-    text-align: center;
-    height: 100%;
-  }#container {
-    display: flex;
-    flex-wrap: wrap;
-  }#container {
-    display: flex;
-    flex-wrap: wrap;
-  }.cartao {
-    margin: 1rem 1rem;
-    height: 20rem;
-    flex-grow: 1;
-    flex-basis: calc(33% - 6rem);
-  }
-  .cartao__conteudo p {
-    padding: 4rem;
-  }.cartao__conteudo h3 {
-    color: var(--text-color);
-    border: 1px solid var(--text-color);
-    text-align: left;
-    padding: 0.5rem;
-    position: absolute;
-    margin: 0.6rem;
-    border-radius: 0.6rem;
-    font-size: 1vw;
-  }.cartao__conteudo__pergunta p {
-    color: var(--text-color);
-    font-weight: 500;
-  }.cartao__conteudo__resposta p {
-    color: var(--card-back-color);
-    font-weight: 700;
-  }cartao:hover .cartao__conteudo
-    transform: rotatey (180deg) 
 }
-  .cartao__conteudo{
-    transform-style: preserve-3d;
-    transition: transform 380ms ease-in-out;
-  }
-  footer {
-    background-color: black;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
-  }    
-  footer p{
-    text-align: center; 
-    font-size: 0.6rem;
-    margin-top: 0.5rem;
-    
-    }
+.cartao_conteudo {
+  background-color: var(--card-front-color);
+  text-align: center;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 300m ease-in-out;
+}
+
+#container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.cartao {
+  margin: 1rem 1rem;
+  height: 20rem;
+  flex-grow: 1;
+  flex-basis: calc(33% - 6rem);
+}
+
+.cartao_conteudo p {
+  padding: 4rem;
+}
+
+.cartao_conteudo h3 {
+  color: var(--text-color);
+  border: 1px solid var(--text-color);
+  text-align: left;
+  padding: 0.5rem;
+  position: absolute;
+  margin: 0.6rem;
+  border-radius: 0.6rem;
+  font-size: 1vw;
+  backface-visibility: hidden;
+}
+
+.cartao_pergunta p {
+  color: var(--text-color);
+  font-weight: 500;
+}
+
+.cartao_resposta p {
+  color: var(--card-back-color);
+  font-weight: 700;
+}
+
+.cartao.active .cartao_conteudo {
+  transform: rotateY(180deg);
+}
+
+.cartao_conteudo {
+  transform-style: preserve-3d;
+  transition: transform 300ms ease-in-out;
+}
+
+.cartao_conteudoh3 {
+  backface-visibility: hidden;
+}
+
+.cartao_pergunta,
+.cartao_resposta {
+  backface-visibility: hidden;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+.cartao_resposta {
+  transform: rotateY(180deg);
+}
+
+footer {
+  background-color: black;
+  color: white;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 2rem;
+}
+
+footer p {
+  text-align: center;
+  font-size: 0.6rem;
+  margin-top: 0.5rem;
+}
