--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: url(img/bg-desktop-blue.webp);
+  background: url(img/bg-desktop-blue\ \(1\));
   font-family: Grandstander;
 }
 .cartao_conteudo {
